web: adjusted height to avoid scrollbar during transition

--- a/web/public/css/style.less
+++ b/web/public/css/style.less
@@ -1,6 +1,6 @@
 @import 'mixins.less';
 @import 'colors.less';
-@height: 569px;
+@height: 566px;
 
 body {
 	background: url(../assets/bg.png);
